--- a/geonode/templates/_permissions.html
+++ b/geonode/templates/_permissions.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div id="permissions-body" >
   <div class="control-group" id="permission-view-download" >
-    <label class="control-label">{% trans "Who can view and download this data?" %}</label>
+    <label class="control-label">{% trans "Who can view this data?" %}</label>
     <div class="controls">
       <div class="radio">
         <label>
@@ -23,36 +23,93 @@
       </div>
     </div>
   </div>
-  <div class="control-group" id="permission-edit" >
-    <label class="control-label">{% trans "Who can edit this data?" %}</label>
+  <div class="control-group" id="permission-view-download" >
+    <label class="control-label">{% trans "Who can download this data?" %}</label>
     <div class="controls">
       <div class="radio">
         <label>
+          <input type="checkbox" name="view_anonymous" id="perms_view_anyone" value="AnonymousUser">
+          {% trans "Anyone" %}
+        </label>
+      </div>
+      <div class="radio">
+        <label>
           {% trans "The following users:" %}
-          <input class="user-select" type="text" name="change_resourcebase" id="change_resourcebase_users" />
+          <input class="user-select" type="text" name="download_resourcebase" id="download_resourcebase_users" />
         </label>
       </div>
       <div class="radio">
         <label>
           {% trans "The following groups:" %}
-          <input class="group-select" type="text" name="change_resourcebase" id="change_resourcebase_groups" /> 
+          <input class="group-select" type="text" name="download_resourcebase" id="download_resourcebase_groups" />
         </label>
       </div>
     </div>
   </div>
   <div class="control-group">
-    <label class="control-label">{% trans "Who can manage?" %}</label>
+    <label class="control-label">{% trans "Who can edit data?" %}</label>
     <div class="controls">
       <div class="radio">
         <label>
           {% trans "The following users:" %}
-          <input class="user-select" type="text" name="change_resourcebase_permissions" id="change_resourcebase_permissions_users" />   
+          <input class="user-select" type="text" name="edit_resourcebase_data" id="edit_resourcebase_data_users" />   
         </label>
       </div>
       <div class="radio">
         <label>
           {% trans "The following groups:" %}
-          <input class="group-select" type="text" name="change_resourcebase_permissions" id="change_resourcebase_permissions_groups" />          
+          <input class="group-select" type="text" name="edit_resourcebase_data" id="edit_resourcebase_data_groups" />          
+        </label>
+      </div>
+    </div>
+  </div>
+  <div class="control-group">
+    <label class="control-label">{% trans "Who can edit metadata?" %}</label>
+    <div class="controls">
+      <div class="radio">
+        <label>
+          {% trans "The following users:" %}
+          <input class="user-select" type="text" name="edit_resourcebase_metadata" id="edit_resourcebase_metadata_users" />   
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          {% trans "The following groups:" %}
+          <input class="group-select" type="text" name="edit_resourcebase_metadata" id="edit_resourcebase_metadata_groups" />          
+        </label>
+      </div>
+    </div>
+  </div>
+  <div class="control-group">
+    <label class="control-label">{% trans "Who can edit style?" %}</label>
+    <div class="controls">
+      <div class="radio">
+        <label>
+          {% trans "The following users:" %}
+          <input class="user-select" type="text" name="edit_resourcebase_style" id="edit_resourcebase_style_users" />   
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          {% trans "The following groups:" %}
+          <input class="group-select" type="text" name="edit_resourcebase_style" id="edit_resourcebase_style_groups" />          
+        </label>
+      </div>
+    </div>
+  </div>
+  <div class="control-group" id="permission-edit" >
+    <label class="control-label">{% trans "Who can change permissions?" %}</label>
+    <div class="controls">
+      <div class="radio">
+        <label>
+          {% trans "The following users:" %}
+          <input class="user-select" type="text" name="change_resourcebase_permissions" id="change_resourcebase_permission_users" />
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          {% trans "The following groups:" %}
+          <input class="group-select" type="text" name="change_resourcebase_permissions" id="change_resourcebase_permissions_groups" /> 
         </label>
       </div>
     </div>
